Adding a custom webfont with a few glyphs commonly used on keyboards

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ mongoose.conf
 mongoose*.exe
 aws-private-key.txt
 fonts/EngraversGothic-Regular-webfont.*
+fonts/kbd-custom.*
 jsonl.min.js
 jsonl.js
+*~
