--- a/bower.json
+++ b/bower.json
@@ -41,6 +41,7 @@
     "ng-file-upload": "5.0.9",
     "angular-ui-bootstrap": "0.12.0",
     "fontawesome": "4.3.0",
-    "hint.css": "1.3.5"
+    "hint.css": "1.3.5",
+    "cssparser": "a4adfd2f5f62bb9c19bcfead974ac0f253a0fb82"
   }
 }
