Cleaned up makefile & deploy scripts
-- I didn't want to deplot 100+MB of the bower_components folder
-- Makefile now copies over just the stuff we want from bower_components
-- Deploy scripts now only certain directories & files (opt-in vs.
opt-out)
-- Fixed "make install"

--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,12 @@ npm-debug.log
 bower_components/
 
 # Generated files
-fonts/kbd-custom.*
-js/jsonl.min.js
-js/jsonl.js
-css/kb.css
-css/kb.css.map
+js/*
+css/*
+fonts/*
 
 # Backup/temporary files
 *~
+
+# Saved layouts
+layouts/
