--- a/bower.json
+++ b/bower.json
@@ -42,6 +42,8 @@
     "angular-ui-bootstrap": "0.12.0",
     "fontawesome": "4.3.0",
     "hint.css": "1.3.5",
-    "angular-cookies": "1.2.28"
+    "angular-cookies": "1.2.28",
+    "ace-builds": "1.2.0",
+    "angular-ui-ace": "0.2.3"
   }
 }
