--- a/bower.json
+++ b/bower.json
@@ -44,6 +44,7 @@
     "hint.css": "1.3.5",
     "angular-cookies": "1.2.28",
     "ace-builds": "1.2.0",
-    "angular-ui-ace": "0.2.3"
+    "angular-ui-ace": "0.2.3",
+    "html2canvas": "0.4.1"
   }
 }
