--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,8 +1,12 @@
 server {
 	listen 80;
 
-	location ~ \.(html|js|css|ico|woff|woff2|ttf|map|jpg|png)$ {
+	location / {
+		root /root/keyboard-layout-editor/;
 		index kb.html;
+	}
+
+	location ~ \.(html|js|css|ico|woff|woff2|ttf|map|jpg|png)$ {
 		root /root/keyboard-layout-editor/;
 	}
 
