--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "keyboard-layout-editor",
   "version": "0.12.0",
-  "homepage": "http://www.keyboard-layout-editor.com",
+  "homepage": "https://www.keyboard-layout-editor.com",
   "authors": [
     "Ian Prest <github.com@ian.prest.ca>"
   ],
